--- a/css/main.css
+++ b/css/main.css
@@ -1,28 +1,23 @@
-.primary,
-.secondary {
+.primary, .secondary {
   position: absolute;
-  top: 0;
-  left: 0;
+  top: 10px;
+  left: 20px;
 }
 
-.primary {
+.portfolio-item .primary {
   transform: rotateY(0);
 }
 
-.primary,
-.secondary {
-    transition: transform 1s;
-    /*backface-visibility: hidden;*/
-}
-
-.secondary {
-          transform: rotateY(180deg);
+.portfolio-item .secondary {
+  transform: rotateY(180deg);
 }
 
 .portfolio-item:hover .primary {
-          transform: rotateY(-180deg);
+    transform: rotateY(-180deg);
+    transition-duration:1s;
 }
 
 .portfolio-item:hover .secondary {
-          transform: rotateY(0);
+    transform: rotateY(0);
+    transition-duration:1s;
 }
